changed css comment

--- a/style.css
+++ b/style.css
@@ -1,7 +1,5 @@
 /*
- * Use this CSS to learn some intersting techniques,
- * in case you're wondering how I built the UI.
- * Have fun! 😁
+CSS Styling
  */
 
 * {
